# webcannon-source

./: .gitignore
source/: .htaccess  link.php  unsub.php  wbl.php
source/cp/: index.php
source/cp/content/: index.php  rotations.php
source/cp/extra/: index.php  kill.php  link-tracking.php  spamassassin.php  time.php
source/cp/isp-relations/: aol_check.php  aol_complaint.php  aol_domain.php  aol_fb_domain.php  aol_log.php  aol_removal.php  dk.php  domains.php  index.php  seed.php
source/cp/management/: SGDNE.php  add_suppression_list.php  categories.php  create_suppression_list.php  delete_suppression_list.php  export-view.php  export.php  images.php  import-other.php  import-view.php  import-wizard.php  imports.php  index.php  list-switch.php  lists.php  operations.php  recipient-add.php  recipient-find.php  recipient-remove.php  suppression_list_count.php  supression-lists-add.php  supression-lists.php  tracked_link.php  uploader.php
source/cp/options/: add_footer.php  add_header.php  delete_content.php  delivery_configuration.php  edit_content.php  general_config.php  header-footer.php  index.php  pages.php  password-change.php  preview-h-f.php  set_default_content.php  user.php
source/cp/reporting/: campaign-breakdown.php  campaign.php  index.php  log-viewer.php  logs.php  statistics-campaign.php  statistics-list.php
source/cp/scheduling/: delivery-cancel.php  delivery-details.php  delivery-queue.php  draft-archive.php  draft-html-frame.php  draft-view.php  draft.php  html_image.php  index.php  personalization-how.php  schedule.php  send-test.php
source/cp/server/: dr.php  dr_add_host.php  dr_add_route.php  dr_delete_host.php  dr_edit_host.php  index.php  php-info.php  server-status.php
source/css/: clearfix.css  dr.css  draft.css  extra_content.css  main.css  old.css  popup.css  public.css  slider.css  table.css  unsub.css
source/css/calendar/: calendar-setup.js  calendar.js  index.html
source/css/calendar/doc/html/: reference.html
source/i/: .htaccess  open.php
source/install/: index.php
source/install/install-files/: .htaccess  book.sql  celibero-data.sql  celibero.sql  celibero.sql.bak  html_footer.txt  text_footer.txt
source/install/shell/: .htaccess  install.sh  rsync.sh  run-install.sh  uninstall.sh
source/install/upgrade/: index.php  upgrade-3.php
source/js/: BytesUploaded.js  campaign.js  collapse.js  draft.js  functions.js  jquery-ui.js  menu.js  rotations.js  shared.js  slider.js
source/lib/: background.php  campaign.cls.php  control_panel.php  delivery_configuration.cls.php  direct_routing.php  draft.cls.php  extra_content.php  filter.cls.php  form.cls.php  ip.cls.php  link_tracking.cls.php  link_tracking.php  list.cls.php  list_db.cls.php  prime_api.cls.php  public.php  suppression_lists.php  validation.cls.php
source/no-web/celiberod/etc/: celibero.conf  celsmtpd.accept  priv.key
source/no-web/celiberod/history/: log
source/no-web/celiberod/src.new/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
source/no-web/celiberod/src.new/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
source/no-web/celiberod/src.new/prepare/: compile  hashtable.c  hashtable.h  iptest.c  mysql_util.c  mysql_util.h  pre.c  prepare  prepare.c  prepare.h
source/no-web/celiberod/src.new/src/: Makefile  Makefile.am  Makefile.in  bouncer  bouncer.c  celacl.c  celacl.h  celcommon.h  celiberod.c  celiberod.h  celiberosmtpd  celiberosmtpd.c  celutil.c  celutil.h  cpuid  cpuid.c  custom.h  dc.c  dc.h  dns.c  dns.h  mqa.c  mqa.h  mysqlutil.c  mysqlutil.h  rba.h  rp.c  rp.h  rs.c  rs.h  test  threads.c  uqa.h  vqr.c  vqr.h  xmailer.h
source/no-web/celiberod/src.new/src/libdomainkeys-0.69/: dktest  dktest.c  dnstest.c  makeheader
source/no-web/core/: Email.php  Error.php  Management.php  Subscribe.php  config.php  config.php.original  functions-management.php  functions-registerfly.php  functions-scheduling.php  functions.php  include.php
source/no-web/core/HTML/: Layout.php  Time_Date.php
source/no-web/core/Net/DNS/: RR.php
source/no-web/core/db/adodb/: adodb-xmlschema.inc.php  adodb.inc.php
source/no-web/core/forms/: form.php
source/no-web/core/installer/: installer.php
source/no-web/core/lists/: countries.php  states.php
source/no-web/core/mail/: decode.php
source/no-web/core/mail/mimemessage/: email_message.php  pickup_message.php  qmail_mail.php  qmail_message.php  sendmail_mail.php  sendmail_message.php  smtp_mail.php  smtp_message.php  test_attachment_message.php  test_email_message.php  test_forwarding_message.php  test_html_mail_message.php  test_multibyte_message.php  test_personalized_bulk_mail.php  test_pickup_message.php  test_qmail_mail.php  test_sendmail_mail.php  test_smarty_personalized_mailing.php  test_smtp_mail.php  test_smtp_message.php  (+2 more)
source/no-web/core/template/: template.php
source/no-web/core/user/: auth.php  permissions.php  profile.php
source/no-web/crons/: day-control.php  hour-control.php  minute-control.php  startup.php
source/no-web/crons/hour/: SGDNE-get.php  SGDNE-send.php  remote_list.php
source/no-web/crons/minute/: commands.php  engine_launch.php  export.php  import.php  operations.php  parse_results.php  prepare.php  prepare_old.php  spam_check.cls.php  spam_check.php
source/no-web/sql/: add_msg_headers_footers.sql  add_tracked_links.sql  celibero.sql  create_dr_tables.sql  create_headers_footers.sql
source/no-web/templates/: abuse.php  can-spam.php  error.php  index.php  layout.php  login.php  lost-password.php  privacy-policy.php
source/no-web/templates/cp/: index.php  layout-pop.php  layout.php  message_success.tpl.php  pager.php
source/no-web/templates/install/: index.php
source/tests/: test.php
(+92 files in other folders)
